# qxmpp

./: .gitlab-ci.yml  .kde-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
doc/: doap.xml  index.doc
doc/doap-rendering/: xeplist.xml
examples/: CMakeLists.txt
examples/audio_call/: AudioCall.cpp  CMakeLists.txt
examples/example_1_echoClient/: example_1_echoClient.cpp
src/: CMakeLists.txt
src/base/: Algorithms.h  Async.h  Constants.h  Enums.h  Iq.h  QXmppArchiveIq.cpp  QXmppArchiveIq.h  QXmppAsync_p.h  QXmppBindIq.cpp  QXmppBindIq.h  QXmppBitsOfBinary.cpp  QXmppBitsOfBinaryData.cpp  QXmppBitsOfBinaryData.h  QXmppBitsOfBinaryIq.cpp  QXmppBitsOfBinaryIq.h  QXmppBookmarkSet.cpp  QXmppBookmarkSet.h  QXmppByteStreamIq.cpp  QXmppByteStreamIq.h  QXmppConstants_p.h  QXmppContactAddresses.cpp  QXmppContactAddresses.h  QXmppDataForm.cpp  QXmppDataForm.h  QXmppDataFormBase.cpp  QXmppDataFormBase.h  QXmppDiscoveryIq.cpp  QXmppDiscoveryIq.h  QXmppElement.cpp  QXmppEncryptedFileSource.cpp  QXmppEncryptedFileSource.h  QXmppEntityTimeIq.cpp  QXmppEntityTimeIq.h  QXmppError.h  QXmppExtension.h  QXmppExternalService.h  QXmppExternalServiceDiscoveryIq.cpp  QXmppExternalServiceDiscoveryIq.h  QXmppFileMetadata.cpp  QXmppFileShare.cpp  (+103 more)
src/client/: GstWrapper.cpp  GstWrapper.h  QXmppAccountMigrationManager.cpp  QXmppAccountMigrationManager.h  QXmppArchiveManager.cpp  QXmppAtmManager.cpp  QXmppAtmManager.h  QXmppAtmTrustMemoryStorage.cpp  QXmppAtmTrustStorage.cpp  QXmppAttentionManager.cpp  QXmppBlockingManager.cpp  QXmppBookmarkManager.cpp  QXmppCall.cpp  QXmppCall.h  QXmppCallInviteManager.cpp  QXmppCallManager.cpp  QXmppCallManager.h  QXmppCallManager_p.h  QXmppCallStream.cpp  QXmppCallStream.h  QXmppCallStream_p.h  QXmppCall_p.h  QXmppCarbonManager.cpp  QXmppCarbonManagerV2.cpp  QXmppClient.cpp  QXmppClient.h  QXmppClientExtension.cpp  QXmppClientExtension.h  QXmppClient_p.h  QXmppConfiguration.cpp  QXmppDiscoveryManager.cpp  QXmppDiscoveryManager.h  QXmppDiscoveryManager_p.h  QXmppE2eeExtension.cpp  QXmppEncryptedFileSharingProvider.cpp  QXmppEntityTimeManager.cpp  QXmppExternalServiceDiscoveryManager.cpp  QXmppFileSharingManager.cpp  QXmppHttpFileSharingProvider.cpp  QXmppHttpUploadManager.cpp  (+33 more)
src/omemo/: CMakeLists.txt  QXmppOmemoData.cpp  QXmppOmemoDeviceElement_p.h  QXmppOmemoDeviceList_p.h  QXmppOmemoManager.cpp  QXmppOmemoManager.h  QXmppOmemoManager_p.cpp  QXmppOmemoManager_p.h  QXmppOmemoMemoryStorage.cpp  QXmppOmemoStorage.cpp
src/server/: QXmppDialback.cpp  QXmppIncomingClient.cpp  QXmppIncomingServer.cpp  QXmppOutgoingServer.cpp  QXmppOutgoingServer.h  QXmppPasswordChecker.cpp  QXmppServer.cpp
tests/: CMakeLists.txt  TestClient.h  util.h
tests/qxmppaccountmigrationmanager/: tst_qxmppaccountmigrationmanager.cpp
tests/qxmppbitsofbinary/: tst_qxmppbitsofbinary.cpp
tests/qxmppbitsofbinaryiq/: tst_qxmppbitsofbinaryiq.cpp
tests/qxmppblockingmanager/: tst_qxmppblockingmanager.cpp
tests/qxmppcallmanager/: tst_qxmppcallmanager.cpp
tests/qxmppclient/: tst_qxmppclient.cpp
tests/qxmppdataform/: tst_qxmppdataform.cpp
tests/qxmppdiscoveryiq/: tst_qxmppdiscoveryiq.cpp
tests/qxmppdiscoverymanager/: tst_qxmppdiscoverymanager.cpp
tests/qxmppentitytimemanager/: tst_qxmppentitytimemanager.cpp
tests/qxmppexternalservicediscoveryiq/: tst_qxmppexternalservicediscoveryiq.cpp
tests/qxmppexternalservicediscoverymanager/: tst_qxmppexternalservicediscoverymanager.cpp
tests/qxmpphttpuploadiq/: tst_qxmpphttpuploadiq.cpp
tests/qxmpphttpuploadmanager/: tst_qxmpphttpuploadmanager.cpp
tests/qxmppiceconnection/: tst_qxmppiceconnection.cpp
tests/qxmppiq/: tst_qxmppiq.cpp
utils/: upload-release.sh
(+35 files in other folders)
